index.html 주소 링크

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
-  <head>
-   <body>
+  <head></head>
+  <body>
     <p>hello World</p>
-   </body>
-  </head>
-</html>
+    <div>포트폴리오</div>
+    <div>
+      <a href="https://jgw0704.kro.ko">jgw0704</a>
+    </div>
+  </body>
+</html>`
