--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <p>hello World</p>
     <div>포트폴리오</div>
     <div>
-      <a href="https://jgw0704.kro.ko">jgw0704</a>
+      <a href="http://jgw0704.kro.kr/">jgw0704</a>
     </div>
   </body>
 </html>`
