프로젝트 목록 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <div>
       <ui>
         <li><a href="http://jgw0704.kro.kr/">jgw0704</a></li>
+        <li><a href="">emloyess 프로젝트(구조 : JSP방식)</a></li>
+        <li><a href="">mall 프로젝트(구조 : 모델1방식)</a></li>
+        <li><a href="">sakila 프로젝트(구조 : 모델2방식)</a></li>
+        <li><a href="">cash 프로젝트(구조 : MVC, springboot)</a></li>
+        <li><a href="">final 프로젝트(구조 : back-end/frontend, springboot, Vue.js)</a></li>
       </ui>
     </div>
   </body>
