--- a/index.html
+++ b/index.html
@@ -1,72 +1,49 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>chart3</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-</head>
-<body>
-	<jsp:include page="/WEB-INF/view/inc/menu.jsp"></jsp:include>
-	<jsp:include page="/WEB-INF/view/inc/chartMenu.jsp"></jsp:include>
-	<h1>chart3</h1>
-	<div>
-		<button id = "totalOfInMoneyByYearChart" type="button">Chart3</button>
+  <head>
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  </head>
+  <body>
+  <div class=" container">
+  	<div class="jumbotron bg-warning text-white" style="height:10px;">
+  	<h1 style="margin:-30px -20px">포트폴리오</h1>
+  	<p style="margin: 35px -15px">안녕하세요</p>
 	</div>
-	<!-- chart -->
-	<div>
-		<canvas id="chart3"></canvas>
-	</div>
-	<!-- table -->
-	<div>
-		
-	</div>
-</body>
-<script>
-$('totalOfInMoneyByYearChart').click(function(){
-	$.ajax({
-		url:'/totalOfInMoneyByYear',
-		type:'get',
-		success:function(data) {
-			var lineCtx = document.getElementById('chart3');
-			var lineChart = new Chart(ctx , {
-				type: 'line',
-			    data: {
-					labels: ['1','2','3','4','5','6','7','8','9','10','11','12'],
-				    datasets: [{
-				    	label : '2019년 월별 수입',
-				    	borderColor: window.chartColors.red,
-						backgroundColor: window.chartColors.red,
-			    		data: [data.january, data.february, data.march, data.april, data.may, 
-				    		data.june,data.july,data.august,data.september, data.october, 
-				    		data.november, data.december
-				    		],
-						fill: false,
-				    }],
-				options: {
-					 scales: {
-				        yAxes: [{
-				        	display: true,
-			                scaleLabel: {
-			                    display: true,
-			                    labelString: '돈의 값'
-			                }
-					        }]
-				        },
-				        xAxes: [{
-				        	display: true,
-			                scaleLabel: {
-			                    display: true,
-			                    labelString: '월'
-			                }
-			            }]
-			        }
-			});
-		}
-	});
-});
-</script>
+	<img src="image/장지운.jpg" class="rounded-circle" width="200" height="260">
+    <h1>장지운</h1>
+    <div class="text-secondary" style="margin-bottom: 400px;">안녕하세요.</div>
+    <h2>테이블</h2>
+   	<table class="table table-bordered" style="margin-bottom: 400px;">
+   		<thead>
+   			<tr>
+   				<th>1</th>
+   				<th>2</th>
+   				<th>3</th>
+   				<th>4</th>
+   				<th>5</th>
+   			</tr>
+   		</thead>
+   		<tbody>
+   			<tr>
+   				<td>ㄱ</td>
+   				<td>ㄴ</td>
+   				<td>ㄷ</td>
+   				<td>ㄹ</td>
+   				<td>ㅁ</td>
+   			</tr>
+   		</tbody>
+   	</table>
+    <h2>프로젝트 목차</h2>
+    <div>
+      <ui>
+        <li><a href="http://jgw0704.kro.kr/">jgw0704</a></li>
+        <li><a href="http://jgw0704.kro.kr/">emloyess 프로젝트(구조 : JSP방식)</a></li>
+        <li><a href="http://">mall 프로젝트(구조 : 모델1방식)</a></li>
+        <li><a href="http://">sakila 프로젝트(구조 : 모델2방식)</a></li>
+        <li><a href="http://">cash 프로젝트(구조 : MVC, springboot)</a></li>
+        <li><a href="http://">final 프로젝트(구조 : back-end/frontend, springboot, Vue.js)</a></li>
+      </ui>
+    </div>
+    </div>
+  </body>
 </html>
